Fixing ignore file
This should fix it wanting to add all the crap files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+source/Bella/Library/
+source/Bella/Temp/
+source/Bella/Obj/
+source/Bella/Build/
+source/Bella/Builds/
+source/Bella/Assets/AssetStoreTools*
+
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
